Refactor tests to use monet_regrid package
- Updated all import statements in test files to replace xarray_regrid with monet_regrid.
- Added rebrand notices in each test file to indicate the transition from xarray_regrid to monet_regrid.
- Ensured that CurvilinearInterpolator and related classes are imported from the new package.
- Adjusted test cases to maintain functionality with the new package structure.

--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,5 @@
 ---
-name: xarray-regrid
+name: monet-regrid
 channels:
   - conda-forge
 dependencies:
@@ -7,4 +7,4 @@ dependencies:
   - xESMF
   - cdo
   - pip:
-      - "xarray-regrid[accel,benchmarking,dev]"
+      - "monet-regrid[accel,benchmarking,dev]"
