Refactor benchmarking notebook to use monet-regrid instead of xesmf; remove backup notebook and update pyproject.toml to exclude additional directories

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,9 @@ dependencies = [
 
 [tool.hatch.build]
 exclude = [
-  "benchmarks/data"
+  "benchmarks/data",
+  "backup",
+  ".benchmarks",
 ]
 
 [project.urls]
